--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <body style="height:100%">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <a class="navbar-brand" href="#">
         <img src="./docs/r-logo.png" width="35" height="35" alt="">
       </a>
@@ -19,25 +19,27 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/RayKayy">Github</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="#">LinkedIn</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Github</a>
-          </li>
-          <li class="nav-item">
-            <button type="button" class="btn btn-info">Info</button>
-          </li>
+        </ul>
+        <ul class="navbar-nav">
+        <li class="nav-item">
+          <button type="button" class="btn btn-info">Resume</button>
+        </li>
         </ul>
       </div>
     </nav>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4">
+        <div class="col-md-3" style="height:100%;background:orange">
           1 of 3
         </div>
-        <div class="col-8">
+        <div class="col-md-9" style="height:100%;background:grey">
           2 of 3 (wider)
         </div>
       </div>
