Added dp and basic summary

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Raymond.K</title>
+    <!-- Bootstrap -->
     <link rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+    <!-- Font awesome -->
+    <link rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   </head>
   <body style="height:100%">
@@ -29,7 +35,7 @@
         </ul>
         <ul class="navbar-nav">
         <li class="nav-item">
-          <button type="button" class="btn btn-info">Resume</button>
+          <button type="button" class="btn btn-info"><i class="fas fa-download"></i>  Resume</button>
         </li>
         </ul>
       </div>
@@ -37,7 +43,15 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-3" style="height:100%;background:orange">
-          1 of 3
+          <img src="./docs/DP.jpeg" class="h-50 w-50 rounded-circle img-fluid">
+          <h3>Summary</h3>
+          <p>
+            Highly motivated and efficient individual, with solid skills working with Javascript and the MERN stack, both
+            independently and collaboratively; experience with multiple programming languages; planned, managed and developed web
+            applications in a team-based environment. Works well in complex, dynamic, and deadline driven environments. Exceptional
+            verbal and written communication skills, fluent in English, Mandarin, and Cantonese. Internationally experienced,
+            flexible and adaptive to varying environments both culturally and physically.
+          </p>
         </div>
         <div class="col-md-9" style="height:100%;background:grey">
           2 of 3 (wider)
