--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
         </ul>
         <ul class="navbar-nav">
         <li class="nav-item">
-          <button type="button" class="btn btn-info"><i class="fas fa-download"></i>  Resume</button>
+          <button type="button"
+          class="btn btn-outline-info"
+          data-toggle="popover"
+          data-placement="bottom"
+          data-content="Click to download Resume!">
+            <i class="fas fa-download"></i>  Resume
+          </button>
         </li>
         </ul>
       </div>
@@ -43,15 +49,102 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-3" style="height:100%;background:orange">
-          <img src="./docs/DP.jpeg" class="h-50 w-50 rounded-circle img-fluid">
-          <h3>Summary</h3>
-          <p>
-            Highly motivated and efficient individual, with solid skills working with Javascript and the MERN stack, both
-            independently and collaboratively; experience with multiple programming languages; planned, managed and developed web
-            applications in a team-based environment. Works well in complex, dynamic, and deadline driven environments. Exceptional
-            verbal and written communication skills, fluent in English, Mandarin, and Cantonese. Internationally experienced,
-            flexible and adaptive to varying environments both culturally and physically.
-          </p>
+          <div class="d-flex flex-column justify-content-center pt-3">
+            <img src="./docs/DP.jpeg" class="mx-auto shadow h-50 w-50 rounded-circle img-fluid">
+            <div class="pt-3" id="accordion">
+              <div class="card">
+                <div class="card-header text-center" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                aria-controls="collapseOne">
+                  Contact
+                </div>
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                  <div class="card-body">
+                    rayk199492@gmail.com
+                    +1 (416)-884-2950
+                    wai-mong-raymond-kwan
+                    RayKayy
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header text-center" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
+                aria-controls="collapseOne">
+                  Skills
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                  <div class="card-body">
+                    PROGRAMMING LANGUAGES
+                    Javascript
+                    Python
+                    HTML
+                    CSS
+                    SQL
+                    FRAMEWORK, LIBRARIES, ENVIRONMENTS
+                    NodeJS
+                    ReactJS
+                    Express
+                    JQuery
+                    Knex
+                    VCS, DATABASE SYSTEMS
+                    PostgresSQL
+                    MongoDB
+                    LANGUAGES
+                    English
+                    Mandarin
+                    Cantonese
+                  </div>
+                </div>
+              </div>
+              <!-- <div class="card">
+                <div class="card-header" id="headingTwo">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
+                      aria-controls="collapseTwo">
+                      Collapsible Group Item #2
+                    </button>
+                  </h5>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                  <div class="card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
+                    officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
+                    moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+                    keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
+                    butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
+                    haven't heard of them accusamus labore sustainable VHS.
+                  </div>
+                </div>
+              </div> -->
+              <div class="card">
+                <div class="card-header" id="headingThree">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
+                      aria-controls="collapseThree">
+                      Collapsible Group Item #3
+                    </button>
+                  </h5>
+                </div>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                  <div class="card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
+                    officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
+                    moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+                    keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
+                    butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
+                    haven't heard of them accusamus labore sustainable VHS.
+                  </div>
+                </div>
+              </div>
+            </div>
+            <h3 class="pt-3">Summary</h3>
+            <p class="">
+              Highly motivated and efficient individual, with solid skills working with Javascript and the MERN stack, both
+              independently and collaboratively; experience with multiple programming languages; planned, managed and developed web
+              applications in a team-based environment. Works well in complex, dynamic, and deadline driven environments. Exceptional
+              verbal and written communication skills, fluent in English, Mandarin, and Cantonese. Internationally experienced,
+              flexible and adaptive to varying environments both culturally and physically.
+            </p>
+          </div>
         </div>
         <div class="col-md-9" style="height:100%;background:grey">
           2 of 3 (wider)
