Added download for resume file; along with resume

--- a/index.html
+++ b/index.html
@@ -34,15 +34,19 @@
           </li>
         </ul>
         <ul class="navbar-nav">
-        <li class="nav-item">
-          <button type="button"
-          class="btn btn-outline-info"
-          data-toggle="popover"
-          data-placement="bottom"
-          data-content="Click to download Resume!">
-            <i class="fas fa-download"></i>  Resume
-          </button>
-        </li>
+          <li class="nav-item">
+            <form method="get" action="./docs/raymond-kwan-resume.pdf">
+              <button
+                type="submit"
+                class="btn btn-outline-info"
+                data-toggle="popover"
+                data-placement="bottom"
+                data-content="Click to download Resume!">
+                <i class="fas fa-download"></i>
+                Resume
+              </button>
+            </form>
+          </li>
         </ul>
       </div>
     </nav>
@@ -55,14 +59,14 @@
               <div class="card">
                 <div class="card-header text-center" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
                 aria-controls="collapseOne">
-                  Contact
+                  <h6>Contact</h6>
                 </div>
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                   <div class="card-body">
                     rayk199492@gmail.com
+                  </br>
                     +1 (416)-884-2950
-                    wai-mong-raymond-kwan
-                    RayKayy
+                  </br>
                   </div>
                 </div>
               </div>
