--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Raymond.K</title>
+    <link rel="stylesheet" href="main.css">
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
     <!-- Bootstrap -->
     <link rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -16,7 +19,7 @@
     crossorigin="anonymous">
   </head>
   <body style="height:100%">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
       <a class="navbar-brand" href="#">
         <img src="./docs/r-logo.png" width="35" height="35" alt="">
       </a>
@@ -54,92 +57,7 @@
       <div class="row">
         <div class="col-md-3" style="height:100%;background:orange">
           <div class="d-flex flex-column justify-content-center pt-3">
-            <img src="./docs/DP.jpeg" class="mx-auto shadow h-50 w-50 rounded-circle img-fluid">
-            <div class="pt-3" id="accordion">
-              <div class="card">
-                <div class="card-header text-center" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
-                aria-controls="collapseOne">
-                  <h6>Contact</h6>
-                </div>
-                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                  <div class="card-body">
-                    rayk199492@gmail.com
-                  </br>
-                    +1 (416)-884-2950
-                  </br>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header text-center" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
-                aria-controls="collapseOne">
-                  Skills
-                </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                  <div class="card-body">
-                    PROGRAMMING LANGUAGES
-                    Javascript
-                    Python
-                    HTML
-                    CSS
-                    SQL
-                    FRAMEWORK, LIBRARIES, ENVIRONMENTS
-                    NodeJS
-                    ReactJS
-                    Express
-                    JQuery
-                    Knex
-                    VCS, DATABASE SYSTEMS
-                    PostgresSQL
-                    MongoDB
-                    LANGUAGES
-                    English
-                    Mandarin
-                    Cantonese
-                  </div>
-                </div>
-              </div>
-              <!-- <div class="card">
-                <div class="card-header" id="headingTwo">
-                  <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
-                      aria-controls="collapseTwo">
-                      Collapsible Group Item #2
-                    </button>
-                  </h5>
-                </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                  <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
-                    officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
-                    moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
-                    keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
-                    butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
-                    haven't heard of them accusamus labore sustainable VHS.
-                  </div>
-                </div>
-              </div> -->
-              <div class="card">
-                <div class="card-header" id="headingThree">
-                  <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
-                      aria-controls="collapseThree">
-                      Collapsible Group Item #3
-                    </button>
-                  </h5>
-                </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                  <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
-                    officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
-                    moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
-                    keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
-                    butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
-                    haven't heard of them accusamus labore sustainable VHS.
-                  </div>
-                </div>
-              </div>
-            </div>
+            <img src="./docs/DP.jpeg" class="dp mx-auto shadow h-50 w-50 rounded-circle img-fluid">
             <h3 class="pt-3">Summary</h3>
             <p class="">
               Highly motivated and efficient individual, with solid skills working with Javascript and the MERN stack, both
@@ -152,6 +70,77 @@
         </div>
         <div class="col-md-9" style="height:100%;background:grey">
           2 of 3 (wider)
+          <ul class="nav nav-tabs bg-secondary" id="myTab" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link text-dark active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+                aria-selected="true">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+                aria-selected="false">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact"
+                aria-selected="false">Contact</a>
+            </li>
+          </ul>
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+              <h3>Summary</h3>
+              Highly motivated and efficient individual, with solid skills working with Javascript and the MERN stack, both
+              independently and collaboratively; experience with multiple programming languages; planned, managed and developed web
+              applications in a team-based environment. Works well in complex, dynamic, and deadline driven environments. Exceptional
+              verbal and written communication skills, fluent in English, Mandarin, and Cantonese. Internationally experienced,
+              flexible and adaptive to varying environments both culturally and physically.
+            </div>
+            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
+            <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+          </div>
+          <!-- <div class="pt-3" id="accordion">
+            <div class="card">
+              <div class="card-header text-center" id="headingOne" data-toggle="collapse" data-target="#collapseOne"
+                aria-expanded="true" aria-controls="collapseOne">
+                <h6>Contact</h6>
+              </div>
+              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                <div class="card-body">
+                  rayk199492@gmail.com
+                  </br>
+                  +1 (416)-884-2950
+                  </br>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header text-center" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo"
+                aria-expanded="true" aria-controls="collapseOne">
+                Skills
+              </div>
+              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                <div class="card-body">
+                  PROGRAMMING LANGUAGES
+                  Javascript
+                  Python
+                  HTML
+                  CSS
+                  SQL
+                  FRAMEWORK, LIBRARIES, ENVIRONMENTS
+                  NodeJS
+                  ReactJS
+                  Express
+                  JQuery
+                  Knex
+                  VCS, DATABASE SYSTEMS
+                  PostgresSQL
+                  MongoDB
+                  LANGUAGES
+                  English
+                  Mandarin
+                  Cantonese
+                </div>
+              </div>
+            </div>
+          </div> -->
         </div>
       </div>
     </div>
