--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   </head>
-  <body style="height:100%">
-    <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
+
+
+  <body style="height:100%;font-family: 'Maven Pro', sans-serif;">
+
+
+    <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
       <a class="navbar-brand" href="#">
         <img src="./docs/r-logo.png" width="35" height="35" alt="">
       </a>
@@ -30,10 +34,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/RayKayy">Github</a>
+            <a class="nav-link" href="https://github.com/RayKayy">Github <i class="fab fa-github"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">LinkedIn</a>
+            <a class="nav-link" href="https://www.linkedin.com/in/wai-mong-raymond-kwan">LinkedIn <i class="fab fa-linkedin"></i></a>
           </li>
         </ul>
         <ul class="navbar-nav">
@@ -53,49 +57,75 @@
         </ul>
       </div>
     </nav>
+
+
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-3" style="height:100%;background:orange">
-          <div class="d-flex flex-column justify-content-center pt-3">
+      <div class="row main-container">
+
+
+        <div class="col-lg-3 left-profile d-flex flex-column" style="height:100%;">
+          <div class="d-flex justify-content-center pt-4">
             <img src="./docs/DP.jpeg" class="dp mx-auto shadow h-50 w-50 rounded-circle img-fluid">
-            <h3 class="pt-3">Summary</h3>
-            <p class="">
-              Highly motivated and efficient individual, with solid skills working with Javascript and the MERN stack, both
-              independently and collaboratively; experience with multiple programming languages; planned, managed and developed web
-              applications in a team-based environment. Works well in complex, dynamic, and deadline driven environments. Exceptional
-              verbal and written communication skills, fluent in English, Mandarin, and Cantonese. Internationally experienced,
-              flexible and adaptive to varying environments both culturally and physically.
-            </p>
           </div>
-        </div>
-        <div class="col-md-9" style="height:100%;background:grey">
-          2 of 3 (wider)
-          <ul class="nav nav-tabs bg-secondary" id="myTab" role="tablist">
-            <li class="nav-item">
-              <a class="nav-link text-dark active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
-                aria-selected="true">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-dark" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
-                aria-selected="false">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-dark" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact"
-                aria-selected="false">Contact</a>
-            </li>
-          </ul>
-          <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-              <h3>Summary</h3>
-              Highly motivated and efficient individual, with solid skills working with Javascript and the MERN stack, both
-              independently and collaboratively; experience with multiple programming languages; planned, managed and developed web
-              applications in a team-based environment. Works well in complex, dynamic, and deadline driven environments. Exceptional
-              verbal and written communication skills, fluent in English, Mandarin, and Cantonese. Internationally experienced,
-              flexible and adaptive to varying environments both culturally and physically.
+
+
+          <h5 class="skills mt-5 text-center">Contact</h5>
+          <div class="contact">
+            <ul class="list-group">
+              <li class="list-group-item"><i class="icons fas fa-phone-square"></i>  +1 (416)-884-2950</li>
+              <li class="list-group-item"><i class="icons fas fa-envelope-square"></i>  <a href="mailto:rayk199492@gmail.com">rayk199492@gmail.com</a></li>
+              <li class="list-group-item"><i class="icons fab fa-instagram"></i>  @raymondk94</li>
+              <li class="list-group-item"><i class="icons fab fa-weixin"></i>  raymondk94</li>
+            </ul>
+          </div>
+
+          <h5 class="skills mt-4 text-center">Skills</h5>
+          <div class="container text-center languages mt-1 mb-5">
+            <div class="row">
+              <div class="col"><i class="fab fa-js-square"></i></div>
+              <div class="col"><i class="fab fa-react"></i></div>
+              <div class="col"><i class="fab fa-node-js"></i></div>
+              <div class="w-100"></div>
+              <div class="col"><i class="fab fa-python"></i></div>
+              <div class="col"><i class="fas fa-gem"></i></div>
+              <div class="w-100"></div>
+              <div class="col"><i class="fab fa-css3-alt"></i></div>
+              <div class="col"><i class="fab fa-html5"></i></div>
+              <div class="col"><i class="fas fa-database"></i></div>
+
             </div>
-            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
-            <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
           </div>
+
+        </div>
+
+
+        <div class="col-lg-9" style="height:100%;background:grey">
+          <h1 class="text-center">PROJECTS</h1>
+
+
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="./docs/profile-background.jpeg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="./docs/profile-background.jpeg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="./docs/profile-background.jpeg" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
+
           <!-- <div class="pt-3" id="accordion">
             <div class="card">
               <div class="card-header text-center" id="headingOne" data-toggle="collapse" data-target="#collapseOne"
