--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Raymond.K</title>
+    <link rel="icon" href="./docs/r-logo.png">
     <link rel="stylesheet" href="main.css">
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
@@ -24,8 +25,9 @@
 
 
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <img src="./docs/r-logo.png" width="35" height="35" alt="">
+        Raymond Kwan
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation">
@@ -64,12 +66,12 @@
 
 
         <div class="col-lg-3 left-profile d-flex flex-column" style="height:100%;">
-          <div class="d-flex justify-content-center pt-4">
-            <img src="./docs/DP.jpeg" class="dp mx-auto shadow h-50 w-50 rounded-circle img-fluid">
+          <div class="d-flex justify-content-center mt-4">
+            <img src="./docs/DP.jpeg" class="dp mx-auto shadow rounded-circle img-fluid">
           </div>
 
 
-          <h5 class="skills mt-5 text-center">Contact</h5>
+          <h5 class="skills mt-4 text-center">Contact</h5>
           <div class="contact">
             <ul class="list-group">
               <li class="list-group-item"><i class="icons fas fa-phone-square"></i>  +1 (416)-884-2950</li>
@@ -99,30 +101,46 @@
         </div>
 
 
-        <div class="col-lg-9" style="height:100%;background:grey">
-          <h1 class="text-center">PROJECTS</h1>
+        <!-- <div class="blur h-100 w-100"></div> -->
+        <div class="col-lg-9 right-projects" style="height:100%">
 
 
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="./docs/profile-background.jpeg" alt="First slide">
+          <div class="row d-flex justify-content-center mt-5">
+            <h1 class="text-center project-title">MY PROJECTS</h1>
+            <div class="w-100 h-0"></div>
+            <div id="carouselExampleControls" class="carousel slide project-slides mt-3" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="https://github.com/RayKayy/rainforest-rails/raw/master/docs/Home.png?raw=true" alt="First slide">
+                  <div class="carousel-caption">
+                    <h5>Rainforest</h5>
+                    <p>E-commerce app using Ruby on Rails</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="https://github.com/RayKayy/tweeter/raw/master/docs/tweet-box1.png?raw=true" alt="Second slide">
+                  <div class="carousel-caption">
+                    <h5>Tweeter</h5>
+                    <p>A simple Twitter clone</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="https://github.com/RayKayy/hichat-app/raw/master/docs/hichat_demo.png?raw=true" alt="Third slide">
+                  <div class="carousel-caption">
+                    <h5>HiChat</h5>
+                    <p>A real-time single-page web app using React and web-sockets</p>
+                  </div>
+                </div>
               </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="./docs/profile-background.jpeg" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="./docs/profile-background.jpeg" alt="Third slide">
-              </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
           </div>
 
 
