--- a/index.html
+++ b/index.html
@@ -112,21 +112,21 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img class="d-block w-100" src="https://github.com/RayKayy/rainforest-rails/raw/master/docs/Home.png?raw=true" alt="First slide">
-                  <div class="carousel-caption">
+                  <div class="carousel-caption d-none d-md-block">
                     <h5>Rainforest</h5>
                     <p>E-commerce app using Ruby on Rails</p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="https://github.com/RayKayy/tweeter/raw/master/docs/tweet-box1.png?raw=true" alt="Second slide">
-                  <div class="carousel-caption">
+                  <div class="carousel-caption d-none d-md-block">
                     <h5>Tweeter</h5>
                     <p>A simple Twitter clone</p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="https://github.com/RayKayy/hichat-app/raw/master/docs/hichat_demo.png?raw=true" alt="Third slide">
-                  <div class="carousel-caption">
+                  <div class="carousel-caption d-none d-md-block">
                     <h5>HiChat</h5>
                     <p>A real-time single-page web app using React and web-sockets</p>
                   </div>
