Minor fixes and optimization with bootstrap

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body style="height:100%;font-family: 'Maven Pro', sans-serif;">
 
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
       <a class="navbar-brand" href="/">
         <img src="./docs/r-logo.png" width="35" height="35" alt="">
         Raymond Kwan
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#about">About <i class="fas fa-book-open"></i></a>
           </li>
           <li class="nav-item">
-            <a target="_blank" class="nav-link" href="https://www.linkedin.com/in/wai-mong-raymond-kwan">LinkedIn <i class="fab fa-linkedin"></i></a>
+            <a class="nav-link" href="#projects">Projects <i class="fas fa-project-diagram"></i></a>
           </li>
         </ul>
         <ul class="navbar-nav">
@@ -67,7 +67,7 @@
 
         <div class="col-lg-3 left-profile d-flex flex-column" style="height:100%;">
           <div class="d-flex justify-content-center mt-4">
-            <img src="./docs/DP.jpeg" class="dp mx-auto shadow rounded-circle img-fluid">
+            <img src="./docs/DP.jpeg" class="dp shadow rounded-circle img-fluid">
           </div>
 
 
@@ -114,7 +114,7 @@
           <div class="scrollable">
 
           <section id="about" class="about-me row d-flex mt-3">
-            <h2>About Me</h2>
+            <h2 class="section-head">About Me</h2>
             <div class="w-100"></div>
             <strong>H.B.A. in Environmental Management <i class="fas fa-arrow-right"></i> {Web Developer};</strong>
             <div class="w-100"></div>
@@ -127,14 +127,14 @@
               applications in a team-based environment. Works well in complex, dynamic, and deadline driven environments. Exceptional
               verbal and written communication skills, fluent in English, Mandarin, and Cantonese. Internationally experienced,
               flexible and adaptive to varying environments both culturally and physically.<br /><br />
-              <em>Actively searching for a position as a Junior Developer.</em>
+              <em>Currently actively searching for a position as a Junior Developer.</em>
             </p>
 
           </section>
 
 
-          <div class="row d-flex justify-content-center mt-5 projects">
-            <h2 class="text-center project-title">MY PROJECTS</h2>
+          <div id="projects" class="row d-flex justify-content-center mt-5 projects">
+            <h2 class="section-head">My Projects</h2>
             <!-- <div class="w-100 h-0"></div> -->
             <div id="carouselProject" class="carousel slide project-slides mt-3" data-ride="carousel">
               <div class="carousel-inner">
