Minor changes in summary; updated static resume

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <strong>location = { was_in: ['Hong Kong', 'Shanghai'], currently_in: 'Toronto' };</strong>
               <div class="w-100"></div>
               <p class="text-justify">
-                <em>I fell in love with coding after taking my first course in programming towards the end of my degree.</em><br /><br />
+                <em>I fell in love with coding after taking my first course in computer science towards the end of my degree.</em><br /><br />
                 Highly motivated and efficient individual with solid skills working with Javascript and the MERN stack, both
                 independently and collaboratively; experience with multiple programming languages. I have planned, managed and developed web
                 applications in a team-based environment. Works well in complex, dynamic, and deadline driven environments. Exceptional
