Fixed grammatical issues in resume and portfolio summary

--- a/index.html
+++ b/index.html
@@ -188,14 +188,15 @@
               <div class="w-100"></div>
               <p class="text-justify">
                 <em>I fell in love with coding after taking my first course in computer science towards the end of my degree.</em><br /><br />
-                I am a highly motivated and efficient individual with solid skills working with Javascript and the MERN stack,
-                both independently and collaboratively; experience with multiple programming languages.
-                Understand core concepts in computer science such as OOP,  recursion, complexity, etc;
-                as well as both development processes such as Test Driven Development (TDD) and Behaviour Driven Development (BDD).
-                I have planned, managed and developed web applications in a team-based environment.
-                Works well in complex, dynamic, and deadline driven environments. Exceptional verbal and written communication skills,
-                fluent in English, Mandarin, and Cantonese. Internationally experienced,
-                flexible and adaptive to varying environments both culturally and physically.<br /><br />
+                I am a highly motivated and efficient individual with solid skills working with Javascript and the MERN stack, with
+                experience with multiple programming languages; who is capable of working both independently and collaboratively.
+                Understand core concepts in computer science such as but not limited to OOP, recursion, complexity; as well as
+                development processes such as Test Driven Development (TDD) and Behaviour Driven Development (BDD). I have planned,
+                managed and developed web applications in a team-based environment and can work well in complex, dynamic, and deadline
+                driven environments. I have exceptional verbal and written communication skills, fluent in English, Mandarin, and
+                Cantonese.<br />
+                Internationally experienced, flexible and adaptive to varying environments both culturally and physically and have
+                strong attention to details.<br /><br />
                 <em>Currently actively searching for a position as a Junior Developer.</em>
               </p>
             </section>
