removed body inline styling

--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   </head>
+  <style>
+    body {
+      font-family: 'Maven Pro', sans-serif;
+    }
+  </style>
 
 
-  <body style="height:100%;font-family: 'Maven Pro', sans-serif;">
+  <body>
 
 
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark">
