Added new project; fixed grammatical errors

--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
               <div class="w-100"></div>
               <p class="text-justify">
                 <em>I fell in love with coding after taking my first course in computer science towards the end of my degree.</em><br /><br />
-                I am a highly motivated and efficient individual with solid skills working with Javascript and the MERN stack, with
-                experience with multiple programming languages; who is capable of working both independently and collaboratively.
+                I am a highly motivated and efficient individual with solid skills developing with the MERN stack, and
+                experience in multiple programming languages; who is capable of working both independently and collaboratively.
                 Understand core concepts in computer science such as but not limited to OOP, recursion, complexity; as well as
                 development processes such as Test Driven Development (TDD) and Behaviour Driven Development (BDD). I have planned,
                 managed and developed web applications in a team-based environment and can work well in complex, dynamic, and deadline
@@ -240,6 +240,15 @@
                       </div>
                     </a>
                   </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="https://github.com/NicolaMGH/SmartTodoList/raw/master/docs/Todos2.png" alt="SMARTS project">
+                    <a target="_blank" href="https://github.com/NicolaMGH/SmartTodoList">
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5>SMARTS</h5>
+                        <p>A smart todo list app using React and NLP npm packages</p>
+                      </div>
+                    </a>
+                  </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselProject" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -261,6 +270,9 @@
                 </a>
                 <a target="_blank" href="https://github.com/RayKayy/hichat-app/" class="list-group-item list-group-item-action">
                   <strong>Hichat</strong><br /> Real-time chat app - React and web-sockets
+                </a>
+                <a target="_blank" href="https://github.com/NicolaMGH/SmartTodoList" class="list-group-item list-group-item-action">
+                  <strong>SMARTS</strong><br /> Todo list Web App with basic analytics - React and NLP libraries
                 </a>
               </div>
             </section>
