removed popover for resume download button

--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
           <li class="nav-item">
             <a target="_blank" href="./docs/raymond-kwan-resume.pdf" download>
               <button
-                class="btn-sm btn-outline-info"
-                data-toggle="popover"
-                data-placement="bottom"
-                data-content="Click to download Resume!">
+                class="btn-sm btn-outline-info">
                 <i class="fas fa-download"></i>
                 Resume
               </button>
