Added experience and anchor for navbar

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <a class="nav-link" href="#about">About <i class="fas fa-book-open"></i></a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#experience">Experiences <i class="fas fa-user-clock"></i></a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#projects">Projects <i class="fas fa-project-diagram"></i></a>
           </li>
         </ul>
@@ -203,7 +206,7 @@
               </p>
             </section>
 
-            <section id="projects" class="sect row d-flex mt-5 projects">
+            <section id="experience" class="sect row d-flex mt-5 experience">
               <h2 class="section-head">My Experience</h2>
               <div class="w-100 h-0"></div>
               <div class="card-group">
