--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#about">About <i class="fas fa-book-open"></i></a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#experience">Experiences <i class="fas fa-user-clock"></i></a>
+            <a class="nav-link" href="#experience">Experiences</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Projects <i class="fas fa-project-diagram"></i></a>
+            <a class="nav-link" href="#projects">Projects</a>
           </li>
         </ul>
         <ul class="navbar-nav">
@@ -217,7 +217,7 @@
                     <p class="card-text">Full-stack Web Development Diploma.
                        This practical diploma program provided me with a hands-on learning approach simulating the industry's real-world environment;
                         which resulted in multiple Web Application projects using a multitude of languages, framework and libraries.<br /><br />
-                      (See Below)</p>
+                      <em>(See Below)</em></p>
                   </div>
                 </div>
                 <div class="card experience-card">
@@ -245,7 +245,7 @@
 
 
 
-            <section id="projects" class="sect row d-flex justify-content-center mt-5 projects">
+            <section id="projects" class="sect row d-flex justify-content-center my-5 projects">
               <h2 class="section-head">My Projects</h2>
               <div class="w-100 h-0"></div>
 
@@ -314,10 +314,17 @@
                 </a>
               </div>
             </section>
+            <footer class="w-100 py-3 px-5 d-flex justify-content-center">
+              <div class="row w-100 d-flex justify-content-around">
+                <div class="w-100 spacer"></div>
+                <small>&copy; Raymond Kwan</small>
+              </div>
+            </footer>
           </div>
         </div>
       </div>
     </div>
+
 
 
 
